fix: add spacing between the items in the lists

--- a/FE-MESS-PORTAL/src/Common/Components/ListControls/listControls.scss
+++ b/FE-MESS-PORTAL/src/Common/Components/ListControls/listControls.scss
@@ -16,6 +16,9 @@
   }
 
   &__body {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     transition: opacity 0.15s ease;
   }
 
